integration_tests/src/snapshots/integration_tests__regular_nft_tests__update_well_known_fungible_tokens.snap
---
source: integration_tests/src/regular_nft_tests.rs
assertion_line: 1061
expression: response
snapshot_kind: text
---
[
  {
    "interface": "FungibleToken",
    "id": "HxhWkVpk5NS4Ltg5nij2G671CKXFRKPK8vy271Ub4uEK",
    "content": {
      "$schema": "https://schema.metaplex.com/nft1.0.json",
      "json_uri": "",
      "files": [],
      "metadata": {
        "name": "Hxro (Wormhole)",
        "symbol": "HXRO"
      },
      "links": {}
    },
    "authorities": [
      {
        "address": "BCD75RNBHrJJpW4dXVagL5mPjzRLnVZq4YirJdjEYMV7",
        "scopes": [
          "full"
        ]
      }
    ],
    "compression": {
      "eligible": false,
      "compressed": false,
      "data_hash": "",
      "creator_hash": "",
      "asset_hash": "",
      "tree": "",
      "seq": 0,
      "leaf_id": 0
    },
    "grouping": [],
    "royalty": {
      "royalty_model": "creators",
      "target": null,
      "percent": 0.0,
      "basis_points": 0,
      "primary_sale_happened": false,
      "locked": false
    },
    "creators": [],
    "ownership": {
      "frozen": false,
      "delegated": false,
      "delegate": null,
      "ownership_model": "token",
      "owner": ""
    },
    "supply": null,
    "mutable": true,
    "burnt": false,
    "lamports": 5616720,
    "executable": false,
    "metadata_owner": "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s",
    "rent_epoch": 18446744073709551615,
    "token_info": {
      "supply": 69421570072968011,
      "decimals": 8,
      "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "mint_authority": "BCD75RNBHrJJpW4dXVagL5mPjzRLnVZq4YirJdjEYMV7"
    }
  },
  {
    "interface": "FungibleToken",
    "id": "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v",
    "content": {
      "$schema": "https://schema.metaplex.com/nft1.0.json",
      "json_uri": "",
      "files": [],
      "metadata": {
        "name": "USD Coin",
        "symbol": "USDC"
      },
      "links": {}
    },
    "authorities": [
      {
        "address": "2wmVCSfPxGPjrnMMn7rchp4uaeoTqN39mXFC2zhPdri9",
        "scopes": [
          "full"
        ]
      }
    ],
    "compression": {
      "eligible": false,
      "compressed": false,
      "data_hash": "",
      "creator_hash": "",
      "asset_hash": "",
      "tree": "",
      "seq": 0,
      "leaf_id": 0
    },
    "grouping": [],
    "royalty": {
      "royalty_model": "creators",
      "target": null,
      "percent": 0.0,
      "basis_points": 0,
      "primary_sale_happened": false,
      "locked": false
    },
    "creators": [],
    "ownership": {
      "frozen": false,
      "delegated": false,
      "delegate": null,
      "ownership_model": "token",
      "owner": ""
    },
    "supply": null,
    "mutable": true,
    "burnt": false,
    "lamports": 5616720,
    "executable": false,
    "metadata_owner": "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s",
    "rent_epoch": 18446744073709551615,
    "token_info": {
      "supply": 9448546835028441,
      "decimals": 6,
      "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "mint_authority": "BJE5MMbqXjVwjAF7oxwPYXnTXDyspzZyt4vwenNw5ruG",
      "freeze_authority": "7dGbd2QZcCKcTndnHcTL8q7SMVXAkp688NTQYwrRCrar"
    }
  }
]
